--- a/plus2.html
+++ b/plus2.html
@@ -175,7 +175,7 @@
         <p>Le ministère de la Défense de la République du Congo œuvre chaque jour à garantir la sécurité, l'intégrité territoriale et la paix au sein de notre nation. Nos forces armées assurent une présence stratégique sur tout le territoire.</p>
       </div>
       <div class="content-img">
-        <img src="./images/000_par7729645_0.jpg" alt="Soldats en mission sur le terrain" />
+        <img src="/images/000_par7729645_0.jpg" alt="Soldats en mission sur le terrain" />
       </div>
     </div>
 
@@ -185,7 +185,7 @@
         <p>Notre armée investit dans la technologie pour renforcer ses capacités : drones, cybersécurité, équipements de pointe... L'innovation est au cœur de nos opérations militaires du XXIe siècle.</p>
       </div>
       <div class="content-img">
-        <img src="./images/web-Défense-innovation-supériorité-autonomie-stratégique.jpg" alt="Technologies militaires modernes" />
+        <img src="/images/web-Défense-innovation-supériorité-autonomie-stratégique.jpg" alt="Technologies militaires modernes" />
       </div>
     </div>
 
@@ -195,7 +195,7 @@
         <p>Le recrutement militaire est une opportunité pour les jeunes de s'engager, de se former et de contribuer activement à la défense de la patrie. Nos centres de formation sont ouverts à tous.</p>
       </div>
       <div class="content-img">
-        <img src="./images/FSYB-Girl-smiling-at-camera.jpg" alt="Recrues militaires en entraînement" />
+        <img src="/images/FSYB-Girl-smiling-at-camera.jpg" alt="Recrues militaires en entraînement" />
       </div>
     </div>
   </section>
