--- a/plus2.html
+++ b/plus2.html
@@ -43,7 +43,7 @@
       background-color: transparent;
       border: 2px solid var(--blanc-france);
       color: var(--blanc-france);
-      padding: 10px 18px;
+      padding: 6px 12px;
       text-decoration: none;
       font-weight: bold;
       border-radius: 5px;
@@ -172,30 +172,56 @@
     <div class="content-block">
       <div class="content-text">
         <h3>Préserver la souveraineté</h3>
-        <p>Le ministère de la Défense de la République du Congo œuvre chaque jour à garantir la sécurité, l'intégrité territoriale et la paix au sein de notre nation. Nos forces armées assurent une présence stratégique sur tout le territoire.</p>
+        <p>
+          Le sol congolais n’est pas seulement une terre ; c’est l’âme d’un peuple, l’héritage de nos ancêtres et la promesse faite à nos enfants.
+Préserver la souveraineté du Congo, c’est protéger ce qui nous unit, ce qui nous élève, et ce qui nous définit.
+Chaque forêt, chaque rivière, chaque pierre porte le témoignage de luttes passées et d’espérances futures.
+La paix que nous défendons n’est pas une faiblesse, c’est la force de ceux qui refusent de plier.
+Aux frontières comme au cœur des villes, notre engagement est total :
+Le Congo restera libre, uni et debout. <br> <strong> Préserver la souveraineté, c’est protéger l’âme du Congo.</strong>
+
+        </p>
       </div>
       <div class="content-img">
-        <img src="/images/000_par7729645_0.jpg" alt="Soldats en mission sur le terrain" />
+        <img src="https://www.adiac-congo.com/sites/default/files/img-20230815-wa0082.jpg" alt="Soldats en mission sur le terrain" />
       </div>
     </div>
 
     <div class="content-block">
       <div class="content-text">
         <h3>Modernisation et Technologie</h3>
-        <p>Notre armée investit dans la technologie pour renforcer ses capacités : drones, cybersécurité, équipements de pointe... L'innovation est au cœur de nos opérations militaires du XXIe siècle.</p>
+        <p>
+
+          Le monde avance, et le Congo avance avec lui.
+Dans chaque circuit, chaque satellite, chaque ligne de code, se construit une nouvelle forme de puissance.
+Nos armes ne sont plus seulement forgées dans l’acier, mais aussi dans la science, la cybersécurité, les drones, les systèmes intelligents.
+La modernité n’efface pas notre histoire ; elle la prolonge avec fierté.
+Former, innover, protéger : voilà notre mission.
+Car un pays qui maîtrise la technologie, maîtrise son avenir. <br> <strong>La technologie est notre nouvelle défense, et l’innovation, notre force silencieuse.</strong>
+
+        </p>
       </div>
       <div class="content-img">
-        <img src="/images/web-Défense-innovation-supériorité-autonomie-stratégique.jpg" alt="Technologies militaires modernes" />
+        <img src="https://www.nato.int/nato_static_fl2014/assets/pictures/images_mfu/2022/2/stock/220223-sto.jpg" alt="Technologies militaires modernes" />
       </div>
     </div>
 
     <div class="content-block">
       <div class="content-text">
         <h3>Un engagement pour la jeunesse</h3>
-        <p>Le recrutement militaire est une opportunité pour les jeunes de s'engager, de se former et de contribuer activement à la défense de la patrie. Nos centres de formation sont ouverts à tous.</p>
+        <p>
+Jeunesse du Congo, vous n’êtes pas seulement l’avenir — vous êtes déjà la lumière qui éclaire notre présent.
+Dans vos rêves naissent les solutions de demain, dans vos bras reposent les forces d’un pays en marche.
+Nous croyons en vous. Nous vous protégeons.
+Mais surtout, nous vous préparons à défendre ce que vous êtes : l’honneur, la paix, la liberté.
+Éduquez-vous. Formez-vous. Relevez-vous.
+Le destin du Congo s’écrira avec vos idées, vos talents, votre courage.
+Ne laissez personne voler votre avenir : vous êtes la promesse que le Congo ne tombera jamais. <br> <strong>La jeunesse est l’armure du Congo et la clef de son éternité.</strong>
+
+        </p>
       </div>
       <div class="content-img">
-        <img src="/images/FSYB-Girl-smiling-at-camera.jpg" alt="Recrues militaires en entraînement" />
+        <img src="https://www.unicef.org/congo/sites/unicef.org.congo/files/styles/open_graph_image/public/179A0688.JPG.jpeg?itok=NDZ2PXmz" alt="Recrues militaires en entraînement" />
       </div>
     </div>
   </section>
