--- a/Forces_armées.html
+++ b/Forces_armées.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Ministère des Armées</title>
-  <link rel="stylesheet" href="/CSS/defense2.css">
+  <link rel="stylesheet" href="./CSS/defense2.css">
 </head>
 <body>
 
