--- a/Forces_armées.html
+++ b/Forces_armées.html
@@ -12,7 +12,7 @@
       <h1>Force Armée Congolaise</h1>
       <button><a href="./index.html">Accueil</a></button> 
       <div class="republique"> 
-        <img src="/images/cropped-Armoirie-COngo.png" alt="REPUBLIQUE DU CONGO">
+        <img src="./images/cropped-Armoirie-COngo.png" alt="REPUBLIQUE DU CONGO">
       </div>
     </div>
   </header>
