--- a/force_navale.html
+++ b/force_navale.html
@@ -159,8 +159,8 @@
     </section>
   </main>
 
-  <footer>
-    &copy; 2025 Ministère des Armées - Force Navale Congolaise
-  </footer>
+    <footer style="background-color: transparent; color: #333333; text-align: center; padding: 20px; font-size: 0.95rem; font-family: 'Roboto', sans-serif;">
+  © 2025 Ministère des Armées - Force Navale Congolaise 
+</footer>
 </body>
 </html>
