--- a/force_tactique.html
+++ b/force_tactique.html
@@ -184,8 +184,8 @@ footer {
     </section>
   </main>
 
-  <footer>
-    &copy; 2025 Ministère des Armées - Force Tactique Congolaise
-  </footer>
+  <footer style="background-color: transparent; color: #333333; text-align: center; padding: 20px; font-size: 0.95rem; font-family: 'Roboto', sans-serif;">
+  © 2025 Ministère des Armées - Force Tactique Congolaise 
+</footer>
 </body>
 </html>
