--- a/force_terestre.html
+++ b/force_terestre.html
@@ -190,8 +190,9 @@ section:hover {
     </section>
   </main>
 
-  <footer>
-    &copy; 2025 Ministère des Armées - Force Terrestre Congolaise
-  </footer>
+ <footer style="background-color: transparent; color: #333333; text-align: center; padding: 20px; font-size: 0.95rem; font-family: 'Roboto', sans-serif;">
+  © 2025 Ministère des Armées - Force Tactique Congolaise 
+</footer>
+
 </body>
 </html>
