--- a/services_communs.html
+++ b/services_communs.html
@@ -166,8 +166,8 @@
     <p>Supervise les soldes, budgets militaires, fournitures et le ravitaillement administratif des troupes.</p>
   </div>
 </main>
-<footer style="background-color: #002147; color: white; text-align: center; padding: 20px; font-size: 0.9rem;">
-  © 2025 Armée de la République du Congo – Tous droits réservés
+  <footer style="background-color: transparent; color: #333333; text-align: center; padding: 20px; font-size: 0.95rem; font-family: 'Roboto', sans-serif;">
+  © 2025 Republique Du Congo - Tout droits reservés - Services Communs
 </footer>
 
 </body>
